--- a/TeatroTicket/src/front/PainelEstatisticasDeVendas.form
+++ b/TeatroTicket/src/front/PainelEstatisticasDeVendas.form
@@ -27,7 +27,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="painelEstatisticas" pref="685" max="32767" attributes="0"/>
+              <Component id="painelEstatisticas" pref="684" max="32767" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -49,25 +49,25 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="PainelLucroMedio" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="painelRankLucro" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="painelRankOcupacao" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="painelRankIngressosVendidos" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="330" max="-2" attributes="0"/>
-                              <Component id="etiquetaTitulo" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
-                              <Component id="painelLucro" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                           <Component id="VoltarMenu" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="483" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="botaoGerarEstatisticas" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <EmptySpace pref="113" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="painelLucro" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Component id="PainelLucroMedio" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Component id="painelRankLucro" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Component id="painelRankOcupacao" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Component id="painelRankIngressosVendidos" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Component id="etiquetaTitulo" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="259" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
@@ -77,9 +77,9 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                   <Component id="etiquetaTitulo" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="painelLucro" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                   <Component id="painelRankIngressosVendidos" min="-2" pref="102" max="-2" attributes="0"/>
@@ -94,7 +94,7 @@
                       <Component id="VoltarMenu" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="botaoGerarEstatisticas" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
